@@ -4,6 +4,7 @@ Release 1.2 (2011-x)
 	* Remove useless success messages
 	* Login page now shows correct logo
 	* Simplified configuration file
+	* Fixed error on calendars with special names
 
 Release 1.1.1 (2011-09-24)
 	* Fix DB schema. Wasn't properlty updated on sql/schema.sql, which
